plugins {
  id 'java'
}

sourceCompatibility = '17'
targetCompatibility = '17'
version = '1.0'

dependencies {
  implementation fileTree( dir: 'lib', include: '**/*.jar' )
}

repositories {
  mavenCentral()
}

test {
  useJUnit()
}

jar {
  manifest {
    attributes( 'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Plugin-Class': 'rcr.RCRPlugin',
                'Plugin-Description': 'Convert OSM maps to RCR maps',
                'Plugin-Version': '2.0.1' )
  }
}

clean.doFirst {
  delete file( new File( rootDir, 'bin' ) )
  delete file( new File( rootDir, 'dist' ) )
}

[compileJava, compileTestJava].each {
  it.options.encoding = 'UTF-8'
  it.options.compilerArgs += [ '-Xlint:deprecation' ]
}

/* Compile */
task completeBuild(type: Jar) {
  // Compile the source code
  from( sourceSets.main.output ) {
    include '**'
  }
  // Merge JAR files
  fileTree( dir: 'lib' ).include( '*.jar' ).exclude( 'josm*.jar' ).exclude( 'jscience*.jar').each {
    jarFile ->
      copy {
        from zipTree( "lib/${jarFile.name}" )
        into "$buildDir/classes/java/main"
      }
  }
  destinationDirectory = file( 'dist' )
  archiveFileName = 'rcr-converter.jar'
}